cmake_minimum_required(VERSION 3.9)
project(Exact_GED_BB_DF_k_best)

set(CMAKE_CXX_STANDARD 11)

add_executable(Exact_GED_BB_DF_k_best
        .idea/artifacts/Exact_GED_BB_DF_iterative_jar.xml
        .idea/codeStyles/Project.xml
        .idea/libraries/gxl.xml
        .idea/libraries/jgrapht_core_1_0_1.xml
        .idea/misc.xml
        .idea/modules.xml
        .idea/workspace.xml
        Exact_GED_BB_DF/.idea/artifacts/Exact_GED_BB_DF_iterative_jar.xml
        Exact_GED_BB_DF/.idea/libraries/gxl.xml
        Exact_GED_BB_DF/.idea/libraries/jgrapht_core_1_0_1.xml
        Exact_GED_BB_DF/.idea/misc.xml
        Exact_GED_BB_DF/.idea/modules.xml
        Exact_GED_BB_DF/.idea/workspace.xml
        Exact_GED_BB_DF/graph_file/graph_1.txt
        Exact_GED_BB_DF/graph_file/graph_2.txt
        Exact_GED_BB_DF/graph_file/GXL_graph_1.gxl
        Exact_GED_BB_DF/graph_file/GXL_graph_2.gxl
        Exact_GED_BB_DF/lib/gxl.jar
        Exact_GED_BB_DF/lib/jgrapht-core-1.0.1.jar
        Exact_GED_BB_DF/src/graph_element/Edge.java
        Exact_GED_BB_DF/src/graph_element/Vertex.java
        Exact_GED_BB_DF/src/imoprt_exoprt_jgrapht_gxl/Export_JGraphT_To_GXL.java
        Exact_GED_BB_DF/src/imoprt_exoprt_jgrapht_gxl/HashFunction.java
        Exact_GED_BB_DF/src/imoprt_exoprt_jgrapht_gxl/Import_JGraphT_From_GXL.java
        Exact_GED_BB_DF/src/META-INF/MANIFEST.MF
        Exact_GED_BB_DF/src/EdgeOperation.java
        Exact_GED_BB_DF/src/Edit_Operation.java
        Exact_GED_BB_DF/src/Exact_GED_BB_DF.java
        Exact_GED_BB_DF/src/GED_Operations.java
        Exact_GED_BB_DF/src/GED_Operations_Cost.java
        Exact_GED_BB_DF/src/h_function.java
        Exact_GED_BB_DF/src/HungarianAlgorithm.java
        Exact_GED_BB_DF/src/Main.java
        Exact_GED_BB_DF/src/Path.java
        Exact_GED_BB_DF/src/Path_Cost_Comparator.java
        Exact_GED_BB_DF/Exact_GED_BB_DF.iml
        Exact_GED_BB_DF/output.txt
        graph_file/graph_1.txt
        graph_file/graph_2.txt
        graph_file/GXL_graph_1.gxl
        graph_file/GXL_graph_2.gxl
        lib/gxl.jar
        lib/jgrapht-core-1.0.1.jar
        out/artifacts/Exact_GED_BB_DF_iterative_jar/Exact_GED_BB_DF.jar
        out/production/Exact_GED_BB_DF/graph_element/Edge.class
        out/production/Exact_GED_BB_DF/graph_element/Vertex.class
        out/production/Exact_GED_BB_DF/imoprt_exoprt_jgrapht_gxl/Export_JGraphT_To_GXL.class
        out/production/Exact_GED_BB_DF/imoprt_exoprt_jgrapht_gxl/HashFunction.class
        out/production/Exact_GED_BB_DF/imoprt_exoprt_jgrapht_gxl/Import_JGraphT_From_GXL.class
        out/production/Exact_GED_BB_DF/META-INF/MANIFEST.MF
        out/production/Exact_GED_BB_DF/EdgeOperation.class
        out/production/Exact_GED_BB_DF/Edit_Operation.class
        out/production/Exact_GED_BB_DF/Exact_GED_BB_DF.class
        out/production/Exact_GED_BB_DF/GED_Operations.class
        out/production/Exact_GED_BB_DF/GED_Operations_Cost\$1.class
        out/production/Exact_GED_BB_DF/GED_Operations_Cost.class
        out/production/Exact_GED_BB_DF/h_function.class
        out/production/Exact_GED_BB_DF/HungarianAlgorithm.class
        out/production/Exact_GED_BB_DF/Main.class
        out/production/Exact_GED_BB_DF/Path.class
        out/production/Exact_GED_BB_DF/Path_Cost_Comparator.class
        out/production/Exact_GED_BB_DF/PathComparator.class
        out/production/Exact_GED_BB_DF_iterative/graph_element/Edge.class
        out/production/Exact_GED_BB_DF_iterative/graph_element/Vertex.class
        out/production/Exact_GED_BB_DF_iterative/imoprt_exoprt_jgrapht_gxl/Export_JGraphT_To_GXL.class
        out/production/Exact_GED_BB_DF_iterative/imoprt_exoprt_jgrapht_gxl/HashFunction.class
        out/production/Exact_GED_BB_DF_iterative/imoprt_exoprt_jgrapht_gxl/Import_JGraphT_From_GXL.class
        out/production/Exact_GED_BB_DF_iterative/META-INF/MANIFEST.MF
        out/production/Exact_GED_BB_DF_iterative/EdgeOperation.class
        out/production/Exact_GED_BB_DF_iterative/Edit_Operation.class
        out/production/Exact_GED_BB_DF_iterative/Exact_GED_BB_DF.class
        out/production/Exact_GED_BB_DF_iterative/GED_Operations.class
        out/production/Exact_GED_BB_DF_iterative/GED_Operations_Cost\$1.class
        out/production/Exact_GED_BB_DF_iterative/GED_Operations_Cost.class
        out/production/Exact_GED_BB_DF_iterative/h_function.class
        out/production/Exact_GED_BB_DF_iterative/HungarianAlgorithm.class
        out/production/Exact_GED_BB_DF_iterative/Main.class
        out/production/Exact_GED_BB_DF_iterative/Path.class
        out/production/Exact_GED_BB_DF_iterative/Path_Cost_Comparator.class
        src/graph_element/Edge.java
        src/graph_element/Vertex.java
        src/imoprt_exoprt_jgrapht_gxl/Export_JGraphT_To_GXL.java
        src/imoprt_exoprt_jgrapht_gxl/HashFunction.java
        src/imoprt_exoprt_jgrapht_gxl/Import_JGraphT_From_GXL.java
        src/META-INF/MANIFEST.MF
        src/EdgeOperation.java
        src/Edit_Operation.java
        src/Exact_GED_BB_DF.java
        src/GED_Operations.java
        src/GED_Operations_Cost.java
        src/h_function.java
        src/HungarianAlgorithm.java
        src/Main.java
        src/Path.java
        src/Path_Cost_Comparator.java
        Exact_GED_BB_DF.iml
        output.txt)
